typestate-macro/tests/unproductive_state.stderr
error: Non-productive state.
 --> $DIR/unproductive_state.rs:9:12
  |
9 |     struct A {}
  |            ^
